# synthbench

./: .gitignore  DATABASE-MIGRATIONS.md  FINDINGS.md  LICENSE  METHODOLOGY.md  README.md  SUBMISSIONS.md  ensemble_blend.py  pyproject.toml
.githooks/: pre-push
docs/: baseline-floors-log.md  benchmark-hardening-analysis.md  convergence-analysis.md  holdout-rotation.md  index.html  leaderboard  leaderboard.json  microdata-ingestion.md  mockup.html  post-flip-audit-2026-04-15.md  traitprint-local-signoff.md
leaderboard-results/: globalopinionqa_ensemble_3blend_20260412_020757.json  globalopinionqa_ensemble_3blend_20260412_021343.json  globalopinionqa_openrouter_anthropic_claude-haiku-4-5_20260411_234610.json  globalopinionqa_openrouter_anthropic_claude-haiku-4-5_20260411_234610.md  globalopinionqa_openrouter_anthropic_claude-sonnet-4.6_20260419_225455.json  globalopinionqa_openrouter_anthropic_claude-sonnet-4.6_20260419_225455.md  globalopinionqa_openrouter_google_gemini-2.5-flash_20260411_234139.json  globalopinionqa_openrouter_google_gemini-2.5-flash_20260411_234139.md  globalopinionqa_openrouter_openai_gpt-4o-mini_20260412_015316.json  globalopinionqa_random-baseline_20260410_202817.json  globalopinionqa_random-baseline_20260410_202817.md  globalopinionqa_synthpanel_gemini-2.5-flash-lite_20260411_075828.json  globalopinionqa_synthpanel_gemini-2.5-flash-lite_20260411_075828.md  globalopinionqa_synthpanel_gpt-4o-mini_20260411_133914.json  globalopinionqa_synthpanel_gpt-4o-mini_20260411_133914.md  globalopinionqa_synthpanel_openrouter_anthropic_claude-haiku-4-5_20260411_164425.json  globalopinionqa_synthpanel_openrouter_anthropic_claude-haiku-4-5_20260411_164425.md  globalopinionqa_synthpanel_openrouter_anthropic_claude-haiku-4-5_20260411_164705.json  globalopinionqa_synthpanel_openrouter_anthropic_claude-haiku-4-5_20260411_164705.md  globalopinionqa_synthpanel_openrouter_anthropic_claude-haiku-4-5_20260411_164855.json  globalopinionqa_synthpanel_openrouter_anthropic_claude-haiku-4-5_20260411_164855.md  globalopinionqa_synthpanel_openrouter_anthropic_claude-sonnet-4_20260411_230741.json  globalopinionqa_synthpanel_openrouter_anthropic_claude-sonnet-4_20260411_230741.md  globalopinionqa_synthpanel_openrouter_anthropic_claude-sonnet-4_20260411_230957.json  globalopinionqa_synthpanel_openrouter_anthropic_claude-sonnet-4_20260411_230957.md  globalopinionqa_synthpanel_openrouter_google_gemini-2.5-flash-lite_20260411_234314.json  globalopinionqa_synthpanel_openrouter_google_gemini-2.5-flash-lite_20260411_234314.md  globalopinionqa_synthpanel_openrouter_openai_gpt-4o-mini_20260411_154954.json  globalopinionqa_synthpanel_openrouter_openai_gpt-4o-mini_20260411_154954.md  globalopinionqa_synthpanel_openrouter_openai_gpt-4o-mini_20260411_155217.json  globalopinionqa_synthpanel_openrouter_openai_gpt-4o-mini_20260411_155217.md  globalopinionqa_synthpanel_openrouter_openai_gpt-4o-mini_20260411_155451.json  globalopinionqa_synthpanel_openrouter_openai_gpt-4o-mini_20260411_155451.md  opinionsqa_ensemble_3blend_20260412_020745.json  opinionsqa_ensemble_3blend_20260412_021342.json  opinionsqa_majority-baseline_20260410_160644.json  opinionsqa_majority-baseline_20260410_202342.json  opinionsqa_majority-baseline_20260410_202346.json  opinionsqa_majority-baseline_20260410_202349.json  opinionsqa_majority-baseline_20260410_202352.json  (+304 more)
notebooks/: getting_started.ipynb  synthpanel_tuning.ipynb
scripts/: backfill-distribution-sums.py  backfill-leaderboard-metrics.py  baseline-floors-report.py  format-check.sh  install-hooks.sh
(+272 files in other folders)
