[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "synthbench"
version = "0.1.0"
description = "Open benchmark harness for synthetic survey respondent quality"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18"]
openai = ["openai>=1.0"]
viz = ["matplotlib>=3.7"]
hf = ["datasets>=2.14"]
subpop = ["datasets>=2.14"]
all = ["anthropic>=0.18", "openai>=1.0", "matplotlib>=3.7", "datasets>=2.14"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
synthbench = "synthbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
